generate exe with launch4j, build JRE with jlink, removed dependency on imgui-java-lwjgl3, removed shadow plugin